Create native image (:wip)